I finished changing the way rhs is called in Control Law Propagator v2.
Now going to test it in the IPYthon notebook.

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -119,6 +119,9 @@
     "    for i in range(len(ts)-1):\n",
     "        # starting value of u for a single bucket\n",
     "        t_start, t_end = ts[i], ts[i+1]\n",
+    "        q_0 = qpu_vec[:state_dim]\n",
+    "        p_0 = qpu_vec[state_dim:2*state_dim]\n",
+    "        u_0 = qpu_vec[2*state_dim:]\n",
     "        qp_vecs = propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s, sliding_window_instance)  # assume \"u\" constant, and propagate q and p\n",
     "        u_vecs = propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance)      # pass in the resulting q and p values to be used for propagating the \"u\"\n",
     "        \n",
@@ -148,17 +151,18 @@
     "    return qp_vecs\n",
     "    \n",
     "    \n",
-    "def propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance): \n",
+    "def propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance):\n",
     "    '''\n",
     "    Propagate u based on q and p values\n",
     "    u_vecs (list of 1-D numpy arrays):\n",
     "    '''\n",
     "    u_vecs = []\n",
-    "    steps = np.linspace(t_start,t_end, n_s)\n",
+    "    u_vec = u_0\n",
+    "    steps = np.linspace(t_start,t_end, n_s+1)\n",
     "    for i in range(n_s):\n",
     "        n_start, n_end = steps[i], steps[i+1]\n",
     "        qp_vec = qp_vecs[i]\n",
-    "        u_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.u_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        u_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.u_rhs, n_start, n_end, u_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma, qp_vec = qp_vec)\n",
     "        u_vecs.append(u_vec[-1]) # one u_vec for each step, append them and you have all the u_vecs for one bucket\n",
     "    return u_vecs\n",
     "        "
