Writing a few tests inside the notebook Control_Law_Propagator_v2.ipynb

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -294,8 +294,45 @@
    },
    "outputs": [],
    "source": [
-    "# propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s):\n",
-    "# propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma, n_s)"
+    "q_0\n",
+    "p_0\n",
+    "u_0\n",
+    "t_start\n",
+    "t_end\n",
+    "n_s\n",
+    "sliding_window_instance\n",
+    "\n",
+    "qp_vecs =  propagate_q_p(q_0, p_0, u_0, t_start, t_end, n_s, sliding_window_instance)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'qp_vecs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-4cf5b43d83b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mt_start\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mt_end\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mn_s\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'qp_vecs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "u_0\n",
+    "qp_vecs\n",
+    "t_start\n",
+    "t_end\n",
+    "n_s\n",
+    "sliding_window_instance\n",
+    "u_vecs = propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance)        "
    ]
   },
   {
