--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -28,26 +28,28 @@
     "import numpy as np\n",
     "import scipy as sp\n",
     "import ode\n",
-    "from sliding_window import *"
+    "# print t_terminal\n",
+    "from sliding_window import *\n",
+    "# print t_terminal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Inputs:\n",
-    "q_0 = np.array([0])\n",
+    "q_0 = np.array([1])\n",
     "p_0 = np.array([0])\n",
     "u_0 = np.array([0])\n",
     "qpu_vec = np.concatenate([q_0, p_0, u_0])\n",
     "\n",
     "t_0 = 0\n",
     "T =  2\n",
-    "K=1\n",
+    "K=10\n",
     "\n",
     "n_s = 10\n",
     "integrateTol = 10**-3\n",
@@ -61,7 +63,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print mySlidingWindow.t_0, mySlidingWindow.T, mySlidingWindow.t_terminal, mySlidingWindow.K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(T-t_0)/float(2*K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -117,16 +160,16 @@
     "    qs=[]\n",
     "    ps=[]\n",
     "    us=[]\n",
-    "\n",
-    "    ts = range(t_0,T+1,(T-t_0)/(2*K))  # go until T+1 because last value will be used as starting point for next window\n",
-    "\n",
+    "#     import pdb; pdb.set_trace()\n",
+    "#     ts = range(t_0,T+1,(T-t_0)/float(2*K))  # go until T+1 because last value will be used as starting point for next window\n",
+    "    ts = np.linspace(t_0, T, (2*K)+1)\n",
     "    for i in range(len(ts)-1):\n",
     "        # starting value of u for a single bucket\n",
     "        t_start, t_end = ts[i], ts[i+1]\n",
     "        q_0 = qpu_vec[:state_dim]\n",
     "        p_0 = qpu_vec[state_dim:2*state_dim]\n",
     "        u_0 = qpu_vec[2*state_dim:]\n",
-    "        qp_vecs = propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s, sliding_window_instance)  # assume \"u\" constant, and propagate q and p\n",
+    "        qp_vecs = propagate_q_p(q_0, p_0, u_0, t_start, t_end, n_s, sliding_window_instance)  # assume \"u\" constant, and propagate q and p\n",
     "        u_vecs = propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance)      # pass in the resulting q and p values to be used for propagating the \"u\"\n",
     "        \n",
     "        qpu_vec_i = np.hstack([qp_vecs, u_vecs])\n",
@@ -146,12 +189,13 @@
     "    Propagate q and p to end of bucket using rk23\n",
     "    '''\n",
     "    qp_vecs = []\n",
-    "    qp_vec = [q_0, p_0]  # pass in all three: q_0, p_0, u_0, but in the qp_rhs function\n",
+    "    qp_vec = np.concatenate([q_0, p_0])  # pass in all three: q_0, p_0, u_0, but in the qp_rhs function\n",
     "    steps = np.linspace(t_start,t_end, n_s+1)\n",
     "    for i in range(n_s):\n",
     "        n_start, n_end = steps[i], steps[i+1]\n",
     "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.qp_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma, u_0 = u_0)\n",
     "        qp_vecs.append(qp_vec[-1])\n",
+    "        qp_vec = qp_vec[-1]\n",
     "    return qp_vecs\n",
     "    \n",
     "    \n",
@@ -168,13 +212,14 @@
     "        qp_vec = qp_vecs[i]\n",
     "        u_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.u_rhs, n_start, n_end, u_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma, qp_vec = qp_vec)\n",
     "        u_vecs.append(u_vec[-1]) # one u_vec for each step, append them and you have all the u_vecs for one bucket\n",
+    "        u_vec = u_vec[-1]\n",
     "    return u_vecs\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +252,7 @@
        "array([3, 2, 4, 1, 3, 2])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,30 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stop' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print stop"
+    "# print stop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +285,7 @@
        "1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -271,10 +304,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0])"
+       "array([1, 0, 0])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +325,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sliding_window_instance = mySlidingWindow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[0]\n",
+      "[0]\n",
+      "10\n",
+      "<sliding_window.SlidingWindowExample object at 0x104cd0350>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print q_0\n",
+    "print p_0\n",
+    "print u_0\n",
+    "t_start = 0\n",
+    "t_end = 1\n",
+    "print n_s\n",
+    "print sliding_window_instance\n",
+    "\n",
+    "qp_vecs =  propagate_q_p(q_0, p_0, u_0, t_start, t_end, n_s, sliding_window_instance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# print stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -302,52 +388,14 @@
      "output_type": "stream",
      "text": [
       "[0]\n",
-      "[0]\n",
-      "[0]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 't_start' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-e0cf4b026451>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mp_0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mt_start\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mt_end\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mn_s\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 't_start' is not defined"
+      "[array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.])]\n",
+      "0\n",
+      "1\n",
+      "10\n",
+      "<sliding_window.SlidingWindowExample object at 0x104cd0350>\n"
      ]
     }
    ],
-   "source": [
-    "print q_0\n",
-    "print p_0\n",
-    "print u_0\n",
-    "print t_start\n",
-    "print t_end\n",
-    "print n_s\n",
-    "print sliding_window_instance\n",
-    "\n",
-    "qp_vecs =  propagate_q_p(q_0, p_0, u_0, t_start, t_end, n_s, sliding_window_instance)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mySlid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "print u_0\n",
     "print qp_vecs\n",
@@ -360,13 +408,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.])]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u_vecs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.]), array([1., 0.])]\n",
+      "0\n",
+      "1\n",
+      "10\n",
+      "<sliding_window.SlidingWindowExample object at 0x104cd0350>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print u_0\n",
+    "print qp_vecs\n",
+    "print t_start\n",
+    "print t_end\n",
+    "print n_s\n",
+    "print sliding_window_instance\n",
+    "u_vecs = propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# t_0, \n",
+    "# T, \n",
+    "# K, \n",
+    "# qpu_vec, \n",
+    "# integrateTol, \n",
+    "# integrateMaxIter, \n",
+    "# state_dim, \n",
+    "# Gamma, \n",
+    "# n_s, \n",
+    "# sliding_window_instance\n",
+    "\n",
+    "qpu_vec, qs, ps, us = propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma, n_s, sliding_window_instance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 0., 0.])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.]),\n",
+       " array([1.])]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.])]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us"
    ]
   },
   {
@@ -378,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -416,11 +682,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.])]\n",
+      "[array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.])]\n",
+      "[array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.])]\n"
+     ]
+    }
+   ],
    "source": [
     "# outputs:\n",
     "\n",
@@ -442,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -454,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -487,11 +766,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "propagate_dynamics() takes exactly 10 arguments (8 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-7e2149d0ac12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mq_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_terminal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-30-af44e058e866>\u001b[0m in \u001b[0;36msliding_window\u001b[0;34m(t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mt_terminal\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mintegrateTol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mintegrateMaxIter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0;31m# qs, ps, and us will go to Mean Field somehow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: propagate_dynamics() takes exactly 10 arguments (8 given)"
+     ]
+    }
+   ],
    "source": [
     "q_bars, p_bars, u_bars = sliding_window(t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal)"
    ]
