The code in the IPython notebook works.  Will copy over to .py files and write unittests.

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -152,7 +152,6 @@
     "    t_0, T, K, integrateTol, integrateMaxIter, state_dim, Gamma = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K, sliding_window_instance.integrateTol, sliding_window_instance.integrateMaxIter, sliding_window_instance.state_dim, sliding_window_instance.Gamma \n",
     "    #     ts = range(t_0,T+1,(T-t_0)/float(2*K))  # go until T+1 because last value will be used as starting point for next window\n",
     "    ts = np.linspace(t_0, T, (2*K)+1)\n",
-    "\n",
     "    for i in range(len(ts)-1):\n",
     "        # starting value of u for a single bucket\n",
     "        t_start, t_end = ts[i], ts[i+1]\n",
@@ -348,7 +347,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -470,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -486,6 +485,28 @@
     "q_bar = apply_filter(qs,weights, weights_total)\n",
     "p_bar = apply_filter(ps,weights, weights_total)\n",
     "u_bar = apply_filter(us,weights, weights_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sliding_window_instance.K"
    ]
   },
   {
@@ -541,13 +562,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def sliding_window(t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal):\n",
+    "def sliding_window(sliding_window_instance):\n",
+    "    ''' \n",
+    "    Inputs:\n",
+    "        t_0 (int): Initial time to start propagating dynamics\n",
+    "        T (int): End time of propagating dynamics \n",
+    "        q_0 (np.array): initial values of state vector\n",
+    "        p_0 (np.array): initial values of costate vector\n",
+    "        u_0 (np.array): initial values of control vector\n",
+    "        state_dim (int): number of states\n",
+    "        Gamma (float): algorithmic parameter for Riemann descent algorithm\n",
+    "        t_terminal (int): time marking termination of control law propagator algorithm\n",
+    "    Outputs:\n",
+    "        q_bars, p_bars, u_bars (list of np.arrays): implemented state/costate/control values for entire propagator.\n",
+    "    ''' \n",
+    "    t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K, sliding_window_instance.q_0, sliding_window_instance.p_0, sliding_window_instance.u_0, sliding_window_instance.state_dim, sliding_window_instance.Gamma, sliding_window_instance.t_terminal\n",
     "    q_bars = []\n",
     "    p_bars = []\n",
     "    u_bars = []\n",
@@ -555,44 +590,98 @@
     "    t=t_0 # wall clock time\n",
     "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "    while t<t_terminal:\n",
-    "        \n",
-    "        qpu_vec, qs, ps, us = propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma)\n",
+    "            \n",
+    "        qpu_vec, qs, ps, us = propagate_dynamics(qpu_vec, sliding_window_instance)\n",
     "        # qs, ps, and us will go to Mean Field somehow\n",
     "\n",
     "        q_bar = apply_filter(qs,weights, weights_total)\n",
     "        p_bar = apply_filter(ps,weights, weights_total)\n",
     "        u_bar = apply_filter(us,weights, weights_total)\n",
-    "        \n",
+    "            \n",
     "        t+=1\n",
-    "        \n",
+    "\n",
     "        q_bars.append(q_bar)\n",
     "        p_bars.append(p_bar)\n",
     "        u_bars.append(u_bar)\n",
     "\n",
-    "    return q_bars, p_bars, u_bars"
+    "    return q_bars, p_bars, u_bars\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_bars, p_bars, u_bars = sliding_window(sliding_window_instance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 't_0' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-7e2149d0ac12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mq_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_terminal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 't_0' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[array([0.]), array([0.])]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "q_bars, p_bars, u_bars = sliding_window(t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal)"
+    "q_bars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.]), array([0.])]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_bars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.]), array([0.])]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u_bars"
    ]
   },
   {
