--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -121,17 +121,17 @@
    },
    "outputs": [],
    "source": [
-    "def rhs(t, qpu_vec, **kwargs):\n",
-    "    # TODO: make sure that the functions that this calls are available\n",
-    "    state_dim = kwargs['state_dim']\n",
-    "    Gamma = kwargs['Gamma']\n",
-    "    q = qpu_vec[:state_dim]\n",
-    "    p = qpu_vec[state_dim:2*state_dim]\n",
-    "    u = qpu_vec[2*state_dim:]\n",
-    "    q_dot =  H_T_p(q,p,u)\n",
-    "    p_dot = -1*H_T_q(q,p,u)\n",
-    "    u_dot = -Gamma*Q_u(q,p,u)\n",
-    "    return np.hstack([q_dot, p_dot, u_dot])"
+    "# def rhs(t, qpu_vec, **kwargs):\n",
+    "#     # TODO: make sure that the functions that this calls are available\n",
+    "#     state_dim = kwargs['state_dim']\n",
+    "#     Gamma = kwargs['Gamma']\n",
+    "#     q = qpu_vec[:state_dim]\n",
+    "#     p = qpu_vec[state_dim:2*state_dim]\n",
+    "#     u = qpu_vec[2*state_dim:]\n",
+    "#     q_dot =  H_T_p(q,p,u)\n",
+    "#     p_dot = -1*H_T_q(q,p,u)\n",
+    "#     u_dot = -Gamma*Q_u(q,p,u)\n",
+    "#     return np.hstack([q_dot, p_dot, u_dot])"
    ]
   },
   {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +631,7 @@
        "[array([0.]), array([0.])]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -653,7 +653,7 @@
        "[array([0.]), array([0.])]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +675,7 @@
        "[array([0.]), array([0.])]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
