wrote skeleton for MeanField class.  Next working on Blackboard class

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -38,20 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-3-569859413ea7>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-569859413ea7>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    def u_rhs(self, t, u_vec, **kwargs):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Agent:\n",
     "    \n",
@@ -132,13 +123,13 @@
     "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
     "    def H_l_D():\n",
-    "        # stack the control variables and return this as one vector\n",
+    "        pass\n",
     "        \n",
     "    def L_l_D():\n",
-    "        # \n",
+    "        pass\n",
     "        \n",
     "    def L_l_D_q_Dot():\n",
-    "        \n",
+    "        pass\n",
     "    # Inputs for numerical propagator\n",
     "    q_0 = np.array([0])\n",
     "    p_0 = np.array([0])\n",
@@ -171,18 +162,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-8-7f3eedecd191>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-7f3eedecd191>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MeanField:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def H_MF_nou(self, q, p):\n",
+    "        pass\n",
+    "        \n",
+    "    def qp_rhs_H_MF_nou(self, t, qp_vec, **kwargs):\n",
+    "        pass\n",
+    "\n",
+    "    def H_MF_u(self, q, p):\n",
+    "        pass\n",
+    "        \n",
+    "    def qp_rhs_H_MF_u(self, t, qp_vec, **kwargs):\n",
+    "        pass\n",
+    "          "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "class MeanField:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        \n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
