Currently I have the basic classes sketched out, but I'm trying to figure out why we do not just report the values after local propagation to the blackboard

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -162,20 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-8-7f3eedecd191>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-7f3eedecd191>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MeanField:\n",
     "    \n",
@@ -194,6 +185,34 @@
     "    def qp_rhs_H_MF_u(self, t, qp_vec, **kwargs):\n",
     "        pass\n",
     "          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Blackboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Blackboard:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def construct_p_q(self, agent):\n",
+    "        pass\n",
+    "    \n",
+    "    # Look at what things the Blackboard needs\n",
+    "    # It at least needs a mapping that tells which states pertain to which agent\n",
+    "    # It needs to keep track of all states, costates, controls for all agents so that we can plug in values when necessary"
    ]
   },
   {
