Currently deciding between two different implementations of the Blackboard.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -46,11 +46,19 @@
    "source": [
     "class Agent:\n",
     "    \n",
+    "    def __init__(self, state_indices):\n",
+    "        '''\n",
+    "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
+    "        tell us that states 1 and 2 pertain to this agent.\n",
+    "        '''\n",
+    "        self.state_indices = state_indices\n",
+    "        self.control_indices = control_indices\n",
+    "    \n",
     "    def L_l(self, q, q_dot, u):\n",
     "        return\n",
     "    \n",
     "    def L_l_q_dot(self, t, q, q_dot, u, **kwargs):\n",
-    "        return \n",
+    "        return\n",
     "    \n",
     "    def H_l_nou(self, q, p, lambda_l):\n",
     "        return \n",
@@ -162,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -205,14 +213,70 @@
     "class Blackboard:\n",
     "    \n",
     "    def __init__(self):\n",
-    "        pass\n",
+    "        '''\n",
+    "#         state_agent_mapping is dictionary with keys: object of class Agent, \n",
+    "#               values: list of integers state_indices state_indices\n",
+    "        '''\n",
+    "#         self.state_agent_mapping={} \n",
+    "        '''       \n",
+    "        agent_q_p_u_values is dictionary with keys: object of class Agent, \n",
+    "                    values (dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs): local values for q, p, and u for this agent.  \n",
+    "                        The indices for these values correspond to the indices given when the agent was initialized.  e.g.\n",
+    "                        if ths agent was initialized as myAgent=Agent(state_indices=[1,2]).  This means that the \n",
+    "                        states 1 and 2 pertain to myAgent.  Let's assume that control variable 1 also pertains to this \n",
+    "                        agent. Then the entry in agent_q_p_u_values would look like so:\n",
+    "#                         {myAgent: {'q': np.array([q_1, q_2]), 'p': np.array([p_1, p_2]), 'u': np.array([u_1])}}\n",
+    "                        {myAgent: {'q': {'1':q_1, '2':q_2}), 'p': {'1':p_1, '2': p_2}, 'u': {'1': u_1}}\n",
+    "        '''\n",
+    "        self.agent_q_p_u_values={}\n",
     "    \n",
     "    def construct_p_q(self, agent):\n",
-    "        pass\n",
+    "        '''\n",
+    "        Inputs:\n",
+    "            agent (instance of class Agent): This is the agent for which we are constructing p and q.\n",
+    "        \n",
+    "        Outputs:\n",
+    "            qp_vec (np.array): vector of q and p values\n",
+    "        '''\n",
+    "        # find which states pertain to this agent\n",
+    "        # for the states that don't, get the values from q_p_u_values and put them into qp_vec IN THE CORRECT LOCATION\n",
+    "        qp_vec = \n",
+    "        return qp_vec\n",
     "    \n",
+    "    def update_agent(self, agent):\n",
+    "        '''\n",
+    "        Inputs:\n",
+    "            agent (instance of class Agent): this is the agent whos values we are updating\n",
+    "        Outputs:\n",
+    "            No outputs.  This method just updates the attributes of the blackboard,\n",
+    "            just update the dictionary, agent_q_p_u_values.\n",
+    "        '''\n",
+    "        for ix in agent.state_indices:\n",
+    "            self.agent_q_p_u_values[agent]['q'][1] = agent.qp_vec[1]\n",
+    "            self.agent_q_p_u_values[agent]['p'][1] = agent.qp_vec[1]\n",
+    "        for ix in agent.state_indices:        \n",
+    "        \n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
     "    # It needs to keep track of all states, costates, controls for all agents so that we can plug in values when necessary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# now, work on construct_p_q\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What things we need in the blackboard:"
    ]
   },
   {
