I decided to use qp_dict from each agent to hold the values for q, p, and u for each agent. This looks like this: {'q': {'1':0, '2':2}, 'p': {'1':0, '2':2}, 'u': {'1':0}}
This allows us to not have to worry about indices in arrays
when dealing with agents, blackboard, etc. We will worry
about connectinto qp_vec in the propagator later.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -226,6 +226,7 @@
     "                        states 1 and 2 pertain to myAgent.  Let's assume that control variable 1 also pertains to this \n",
     "                        agent. Then the entry in agent_q_p_u_values would look like so:\n",
     "                        {myAgent: {'q': {'1':q_1, '2':q_2}), 'p': {'1':p_1, '2': p_2}, 'u': {'1': u_1}}\n",
+    "                        Obviously if there is a state that does not pertain to that agent, then it will not have an etry in the dictionary.\n",
     "        '''\n",
     "        self.agent_q_p_u_values={}\n",
     "    \n",
@@ -250,10 +251,10 @@
     "            No outputs.  This method just updates the attributes of the blackboard,\n",
     "            just update the dictionary, agent_q_p_u_values.\n",
     "        '''\n",
-    "        for ix in agent.state_indices:\n",
-    "            self.agent_q_p_u_values[agent]['q'][1] = agent.qp_vec[1]\n",
-    "            self.agent_q_p_u_values[agent]['p'][1] = agent.qp_vec[1]\n",
-    "        for ix in agent.state_indices:        \n",
+    "\n",
+    "        self.agent_q_p_u_values[agent]['q']= agent.qp_dict['q']\n",
+    "        self.agent_q_p_u_values[agent]['p']= agent.qp_dict['p']\n",
+    "        self.agent_q_p_u_values[agent]['u'] = agent.u_dict['u']\n",
     "        \n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
