--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -53,6 +53,10 @@
     "        '''\n",
     "        self.state_indices = state_indices\n",
     "        self.control_indices = control_indices\n",
+    "        self.u_l_vec = None\n",
+    "        self.qp_l_vec = None\n",
+    "        self.u_l_dict = None\n",
+    "        self.qp_l_dict = None\n",
     "    \n",
     "    def L_l(self, q, q_dot, u):\n",
     "        return\n",
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +221,7 @@
     "#         state_agent_mapping is dictionary with keys: object of class Agent, \n",
     "#               values: list of integers state_indices state_indices\n",
     "        '''\n",
-    "#         self.state_agent_mapping={} \n",
+    "#         self.state_agent_mapping={}\n",
     "        '''       \n",
     "        agent_q_p_u_values is dictionary with keys: object of class Agent, \n",
     "                    values (dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs): local values for q, p, and u for this agent.  \n",
@@ -226,6 +230,7 @@
     "                        states 1 and 2 pertain to myAgent.  Let's assume that control variable 1 also pertains to this \n",
     "                        agent. Then the entry in agent_q_p_u_values would look like so:\n",
     "                        {myAgent: {'q': {'1':q_1, '2':q_2}), 'p': {'1':p_1, '2': p_2}, 'u': {'1': u_1}}\n",
+    "                        Obviously if there is a state that does not pertain to that agent, then it will not have an etry in the dictionary.\n",
     "        '''\n",
     "        self.agent_q_p_u_values={}\n",
     "    \n",
@@ -236,11 +241,14 @@
     "        \n",
     "        Outputs:\n",
     "            qp_vec (np.array): vector of q and p values\n",
+    "            u_vec (np.array): vector of u values\n",
     "        '''\n",
     "        # find which states pertain to this agent\n",
-    "        # for the states that don't, get the values from q_p_u_values and put them into qp_vec IN THE CORRECT LOCATION\n",
-    "        qp_vec = \n",
-    "        return qp_vec\n",
+    "        # for the states that don't, get the values from q_p_u_values and put them into qp_vec \n",
+    "        \n",
+    "        qp_vec = agent\n",
+    "        # read all other values for other states from agent_q_p_u_values\n",
+    "        return qp_vec, u_vec\n",
     "    \n",
     "    def update_agent(self, agent):\n",
     "        '''\n",
@@ -250,10 +258,10 @@
     "            No outputs.  This method just updates the attributes of the blackboard,\n",
     "            just update the dictionary, agent_q_p_u_values.\n",
     "        '''\n",
-    "        for ix in agent.state_indices:\n",
-    "            self.agent_q_p_u_values[agent]['q'][1] = agent.qp_vec[1]\n",
-    "            self.agent_q_p_u_values[agent]['p'][1] = agent.qp_vec[1]\n",
-    "        for ix in agent.state_indices:        \n",
+    "\n",
+    "        self.agent_q_p_u_values[agent]['q']= agent.qp_dict['q']\n",
+    "        self.agent_q_p_u_values[agent]['p']= agent.qp_dict['p']\n",
+    "        self.agent_q_p_u_values[agent]['u'] = agent.u_dict['u']\n",
     "        \n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
