--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -223,16 +223,12 @@
     "        '''\n",
     "#         self.state_agent_mapping={}\n",
     "        '''       \n",
-    "        agent_q_p_u_values is dictionary with keys: object of class Agent, \n",
-    "                    values (dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs): local values for q, p, and u for this agent.  \n",
-    "                        The indices for these values correspond to the indices given when the agent was initialized.  e.g.\n",
-    "                        if ths agent was initialized as myAgent=Agent(state_indices=[1,2]).  This means that the \n",
-    "                        states 1 and 2 pertain to myAgent.  Let's assume that control variable 1 also pertains to this \n",
-    "                        agent. Then the entry in agent_q_p_u_values would look like so:\n",
-    "                        {myAgent: {'q': {'1':q_1, '2':q_2}), 'p': {'1':p_1, '2': p_2}, 'u': {'1': u_1}}\n",
-    "                        Obviously if there is a state that does not pertain to that agent, then it will not have an etry in the dictionary.\n",
+    "        q_p_u_values is a dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs: local values for q, p, and u for this agent.  \n",
+    "                        blackboard holds all of the most recent local values, e.g.\n",
+    "                        {'q': {'1':3, '2':0}, 'p': {'1':3, '2': 2}, 'u': {'1': 0}}\n",
+    "                        It doesn't care which agent updated them most recently.  It only needs to know which values to update.\n",
     "        '''\n",
-    "        self.agent_q_p_u_values={}\n",
+    "        self.q_p_u_values={}\n",
     "    \n",
     "    def construct_p_q(self, agent):\n",
     "        '''\n",
@@ -251,17 +247,20 @@
     "        return qp_vec, u_vec\n",
     "    \n",
     "    def update_agent(self, agent):\n",
-    "        '''\n",
+    "        '''  This method should be called after local propagation of each agent\n",
     "        Inputs:\n",
     "            agent (instance of class Agent): this is the agent whos values we are updating\n",
     "        Outputs:\n",
     "            No outputs.  This method just updates the attributes of the blackboard,\n",
     "            just update the dictionary, agent_q_p_u_values.\n",
     "        '''\n",
-    "\n",
-    "        self.agent_q_p_u_values[agent]['q']= agent.qp_dict['q']\n",
-    "        self.agent_q_p_u_values[agent]['p']= agent.qp_dict['p']\n",
-    "        self.agent_q_p_u_values[agent]['u'] = agent.u_dict['u']\n",
+    "        # determine which states pertain to this agent and replace the old values with new\n",
+    "        for state_ix in agent.state_indices:\n",
+    "            self.q_p_u_values[agent]['q'][str(state_ix)] = agent.qp_dict['q'][str(state_ix)]\n",
+    "            self.q_p_u_values[agent]['p'][str(state_ix)] = agent.qp_dict['p'][str(state_ix)]\n",
+    "            \n",
+    "        for control_ix in agent.control_indices:\n",
+    "            self.q_p_u_values[agent]['u'][str(control_ix)] = agent.u_dict['u'][str(control_ix)]\n",
     "        \n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
