Removing the agent as a key in the dictionayr because blackboard should not care where this information comes from - it just holds most recent values regardless of which agent reported them.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -256,8 +256,8 @@
     "        '''\n",
     "        # determine which states pertain to this agent and replace the old values with new\n",
     "        for state_ix in agent.state_indices:\n",
-    "            self.q_p_u_dict[agent]['q'][str(state_ix)] = agent.qp_dict['q'][str(state_ix)]\n",
-    "            self.q_p_u_dict[agent]['p'][str(state_ix)] = agent.qp_dict['p'][str(state_ix)]\n",
+    "            self.q_p_u_dict['q'][str(state_ix)] = agent.qp_dict['q'][str(state_ix)]\n",
+    "            self.q_p_u_dict['p'][str(state_ix)] = agent.qp_dict['p'][str(state_ix)]\n",
     "            \n",
     "        for control_ix in agent.control_indices:\n",
     "            self.q_p_u_dict[agent]['u'][str(control_ix)] = agent.u_dict['u'][str(control_ix)]\n",
