Removed qp_dict and u_dict, and combined into one dictionary called q_p_u_dict.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
    "source": [
     "class Agent:\n",
     "    \n",
-    "    def __init__(self, state_indices):\n",
+    "    def __init__(self, state_indices, control_indices):\n",
     "        '''\n",
     "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
     "        tell us that states 1 and 2 pertain to this agent.\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -227,8 +227,9 @@
     "                        blackboard holds all of the most recent local values, e.g.\n",
     "                        {'q': {'1':3, '2':0}, 'p': {'1':3, '2': 2}, 'u': {'1': 0}}\n",
     "                        It doesn't care which agent updated them most recently.  It only needs to know which values to update.\n",
+    "        q_p_u_dict initially will be filled \n",
     "        '''\n",
-    "        self.q_p_u_dict={}\n",
+    "        self.q_p_u_dict={'q':{}, 'p':{}, 'u':{}}\n",
     "    \n",
     "    def construct_p_q(self, agent):\n",
     "        '''\n",
@@ -246,7 +247,7 @@
     "        # read all other values for other states from agent_q_p_u_dict\n",
     "        return qp_vec, u_vec\n",
     "    \n",
-    "    def update_agent(self, agent):\n",
+    "    def update_q_p_u_dict(self, agent):\n",
     "        '''  This method should be called after local propagation of each agent\n",
     "        Inputs:\n",
     "            agent (instance of class Agent): this is the agent whos values we are updating\n",
@@ -256,11 +257,11 @@
     "        '''\n",
     "        # determine which states pertain to this agent and replace the old values with new\n",
     "        for state_ix in agent.state_indices:\n",
-    "            self.q_p_u_dict['q'][str(state_ix)] = agent.qp_dict['q'][str(state_ix)]\n",
-    "            self.q_p_u_dict['p'][str(state_ix)] = agent.qp_dict['p'][str(state_ix)]\n",
+    "            self.q_p_u_dict['q'][str(state_ix)] = agent.q_p_u_dict['q'][str(state_ix)]\n",
+    "            self.q_p_u_dict['p'][str(state_ix)] = agent.q_p_u_dict['p'][str(state_ix)]\n",
     "            \n",
     "        for control_ix in agent.control_indices:\n",
-    "            self.q_p_u_dict[agent]['u'][str(control_ix)] = agent.u_dict['u'][str(control_ix)]\n",
+    "            self.q_p_u_dict['u'][str(control_ix)] = agent.q_p_u_dict['u'][str(control_ix)]\n",
     "        \n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
@@ -268,14 +269,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### small test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# now, work on construct_p_q\n"
+    "myAgent=Agent(state_indices=[1,2], control_indices=[1,3])\n",
+    "myAgent.q_p_u_dict={}\n",
+    "myAgent.q_p_u_dict['q']={}\n",
+    "myAgent.q_p_u_dict['q']['1']=[0]\n",
+    "myAgent.q_p_u_dict['q']['2']=[0]\n",
+    "\n",
+    "myAgent.q_p_u_dict['p']={}\n",
+    "myAgent.q_p_u_dict['p']['1']=[0]\n",
+    "myAgent.q_p_u_dict['p']['2']=[0]\n",
+    "\n",
+    "\n",
+    "myAgent.q_p_u_dict['u']={}\n",
+    "myAgent.q_p_u_dict['u']['1']=[0]\n",
+    "myAgent.q_p_u_dict['u']['2']=[0]\n",
+    "\n",
+    "bb=Blackboard()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-163bb6be3765>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_q_p_u_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-35-b4a5f1643956>\u001b[0m in \u001b[0;36mupdate_q_p_u_dict\u001b[0;34m(self, agent)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcontrol_ix\u001b[0m \u001b[0;32min\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'u'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontrol_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'u'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontrol_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;31m# Look at what things the Blackboard needs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: '3'"
+     ]
+    }
+   ],
+   "source": [
+    "bb.update_q_p_u_dict(myAgent)"
    ]
   },
   {
