Added assertion for sanity check

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -208,9 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -256,6 +256,9 @@
     "            just update the dictionary, agent_q_p_u_dict.\n",
     "        '''\n",
     "        # determine which states pertain to this agent and replace the old values with new\n",
+    "        # assert that the number of states is same as number of costates:\n",
+    "        assert len(agent.q_p_u_dict['q']) == len(agent.q_p_u_dict['p']), 'Number of states is not same as number of costates'\n",
+    "        \n",
     "        for state_ix in agent.state_indices:\n",
     "            self.q_p_u_dict['q'][str(state_ix)] = agent.q_p_u_dict['q'][str(state_ix)]\n",
     "            self.q_p_u_dict['p'][str(state_ix)] = agent.q_p_u_dict['p'][str(state_ix)]\n",
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +296,6 @@
     "myAgent.q_p_u_dict['p']['1']=0\n",
     "myAgent.q_p_u_dict['p']['2']=1\n",
     "\n",
-    "\n",
     "myAgent.q_p_u_dict['u']={}\n",
     "myAgent.q_p_u_dict['u']['1']=0\n",
     "myAgent.q_p_u_dict['u']['2']=1\n",
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +327,7 @@
        "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
