The method contruct_p_q in the blackboard appears to be working:     - it takes in an agent object, and outputs a q_p_u_dict       containing the quenched values for that agent.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -230,6 +230,7 @@
     "        q_p_u_dict initially will be filled \n",
     "        '''\n",
     "        self.q_p_u_dict={'q':{}, 'p':{}, 'u':{}}\n",
+    "        self.agents=[]\n",
     "    \n",
     "    def construct_p_q(self, agent):\n",
     "        '''\n",
@@ -237,15 +238,31 @@
     "            agent (instance of class Agent): This is the agent for which we are constructing p and q.\n",
     "        \n",
     "        Outputs:\n",
-    "            qp_vec (np.array): vector of q and p values\n",
-    "            u_vec (np.array): vector of u values\n",
+    "            q_p_u_dict (dictionary): This dictionary holds all of the q, p, and u values for all of the agents\n",
     "        '''\n",
+    "        assert agent in self.agents, 'this agent\\'s values have not been added to the blackboard.  please call \"self.update_q_p_u_dict(<agent>)\" before calling this method'\n",
+    "        q_p_u_dict = {'q':{}, 'p':{}, 'u':{}}\n",
     "        # find which states pertain to this agent\n",
-    "        # for the states that don't, get the values from q_p_u_dict and put them into qp_vec \n",
-    "        \n",
-    "        qp_vec = agent\n",
-    "        # read all other values for other states from agent_q_p_u_dict\n",
-    "        return qp_vec, u_vec\n",
+    "        # for the states that don't, get the values from q_p_u_dict and put them into qp_vec\n",
+    "        for state_ix in agent.state_indices:\n",
+    "            q_p_u_dict['q'][str(state_ix)] = self.q_p_u_dict['q'][str(state_ix)]\n",
+    "            q_p_u_dict['p'][str(state_ix)] = self.q_p_u_dict['p'][str(state_ix)]\n",
+    "\n",
+    "        for control_ix in agent.control_indices:\n",
+    "            q_p_u_dict['u'][str(control_ix)] = self.q_p_u_dict['u'][str(control_ix)]\n",
+    "\n",
+    "        # for state indices which are not part of agent.state_indices, fill in from blackboard q_p_u_dict\n",
+    "        assert len(set([str(x) for x in agent.control_indices]) - set(self.q_p_u_dict['u'].keys())) == 0, ' there should not be any controls in agent that are not in blackboard '\n",
+    "        assert len(set([str(x) for x in agent.state_indices]) - set(self.q_p_u_dict['q'].keys())) == 0, ' there should not be any states in agent that are not in blackboard '\n",
+    "\n",
+    "        # blackboard - agent\n",
+    "        quenched_state_indices = set([str(x) for x in agent.state_indices]) - set(self.q_p_u_dict['q'].keys())\n",
+    "        # fill in with values from blackboard\n",
+    "        for state_ix in quenched_state_indices:\n",
+    "            q_p_u_dict['q'][str(state_ix)] = self.q_p_u_dict['q'][str(state_ix)]\n",
+    "            q_p_u_dict['p'][str(state_ix)] = self.q_p_u_dict['p'][str(state_ix)]\n",
+    "            \n",
+    "        return q_p_u_dict\n",
     "    \n",
     "    def update_q_p_u_dict(self, agent):\n",
     "        '''  This method should be called after local propagation of each agent\n",
@@ -265,7 +282,7 @@
     "            \n",
     "        for control_ix in agent.control_indices:\n",
     "            self.q_p_u_dict['u'][str(control_ix)] = agent.q_p_u_dict['u'][str(control_ix)]\n",
-    "        \n",
+    "        self.agents.append(agent)\n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
     "    # It needs to keep track of all states, costates, controls for all agents so that we can plug in values when necessary"
@@ -280,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -327,13 +344,89 @@
        "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bb.q_p_u_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print myAgent.control_indices\n",
+    "print myAgent.state_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bb.q_p_u_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_p_u_dict = bb.construct_p_q(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_p_u_dict"
    ]
   },
   {
